# Trading

./: .gitignore  CLAUDE.md  README.md  app.py  data.py  debate.py  eval.py  graph.py  harness.py  llm.py  main.py  models.py  news_agent.py  pm.py  pyproject.toml  pyrightconfig.json  ta_agent.py  test.ipynb  test_graph_hitl.py  usage.py
.claude/: settings.local.json
docs/: architecture.md  backlog.md  roadmap.md  thingsnotsureabout.md
docs/superpowers/plans/: 2026-04-15-simplify-codebase.md
docs/superpowers/specs/: 2026-04-04-btc-ta-agent-design.md  2026-04-04-news-agent-design.md  2026-04-28-langgraph-checkpointing-design.md
notes/: Market_Selection_Crypto.docx  Research_Summary.docx  notes.txt
prompts/: __init__.py  debate.py  news.py  ta.py
tests/: test_data.py  test_news_agent.py  test_tools.py
